--- a/app/src/main/res/layout/frag1_layout.xml
+++ b/app/src/main/res/layout/frag1_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_fragmen1">
+    android:background="@android:color/white">
 
 
     <TextView
@@ -15,7 +15,7 @@
         android:paddingTop="15dp"
         android:text="Input Paragraf"
         android:textStyle="bold"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@android:color/black"
         android:textSize="10pt"
 
 
@@ -37,11 +37,14 @@
             android:layout_height="match_parent"
             android:background="@drawable/border_style"
             android:outlineAmbientShadowColor="@android:color/darker_gray"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/darker_gray"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:hint="Masukkan paragraf"
-            android:textColorHint="@android:color/white"/>
+            android:textSize="19dp"
+            android:fontFamily="serif-monospace"
+            android:textStyle="bold"
+            android:hint="Ketuk untuk mengetikkan sesuatu . . ."
+            android:textColorHint="@android:color/darker_gray"/>
     </ScrollView>
 
     <TextView
@@ -49,9 +52,9 @@
         android:layout_height="wrap_content"
         android:paddingLeft="15dp"
         android:paddingTop="220dp"
-        android:text="Hasil"
+        android:text="Result"
         android:textStyle="bold"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@android:color/black"
         android:textSize="10pt" />
 
     <ScrollView
@@ -60,7 +63,13 @@
         android:layout_marginLeft="17dp"
         android:layout_marginTop="260dp"
 
-        android:background="@android:color/transparent"></ScrollView>
+        android:background="@android:color/transparent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@color/colorAccent"/>
+    </ScrollView>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -76,7 +85,7 @@
 
             android:gravity="center"
             android:outlineProvider="background"
-            android:text="PROSES"
+            android:text="PROCESS"
             android:textSize="15dp"
             android:background="@drawable/round"
 
