--- a/app/src/main/res/layout/frag1_layout.xml
+++ b/app/src/main/res/layout/frag1_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@color/greyBright">
 
 
     <TextView
@@ -14,9 +14,9 @@
         android:paddingLeft="15dp"
         android:paddingTop="15dp"
         android:text="Input Paragraf"
-        android:textStyle="bold"
         android:textColor="@android:color/black"
         android:textSize="10pt"
+        android:textStyle="bold"
 
 
         tools:ignore="MissingConstraints" />
@@ -27,24 +27,24 @@
         android:layout_height="120dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="50dp"
-        android:background="@android:color/transparent"
-        android:outlineSpotShadowColor="@android:color/white"
+        android:background="@drawable/borderfix"
+        android:outlineSpotShadowColor="@android:color/transparent"
         android:paddingTop="10dp"
         android:theme="@style/Theme.AppCompat.DayNight">
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/border_style"
+            android:background="@android:color/transparent"
+            android:fontFamily="serif-monospace"
+            android:hint="Ketuk untuk mengetikkan sesuatu . . ."
             android:outlineAmbientShadowColor="@android:color/darker_gray"
-            android:textColor="@android:color/darker_gray"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
+            android:textColor="@android:color/darker_gray"
+            android:textColorHint="@android:color/darker_gray"
             android:textSize="19dp"
-            android:fontFamily="serif-monospace"
-            android:textStyle="bold"
-            android:hint="Ketuk untuk mengetikkan sesuatu . . ."
-            android:textColorHint="@android:color/darker_gray"/>
+            android:textStyle="bold" />
     </ScrollView>
 
     <TextView
@@ -53,9 +53,9 @@
         android:paddingLeft="15dp"
         android:paddingTop="220dp"
         android:text="Result"
-        android:textStyle="bold"
         android:textColor="@android:color/black"
-        android:textSize="10pt" />
+        android:textSize="10pt"
+        android:textStyle="bold" />
 
     <ScrollView
         android:layout_width="300dp"
@@ -63,11 +63,15 @@
         android:layout_marginLeft="17dp"
         android:layout_marginTop="260dp"
 
-        android:background="@android:color/transparent">
+        android:background="@drawable/borderfix">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/colorAccent"/>
+            android:textColor="@android:color/darker_gray"
+            android:fontFamily="serif-monospace"
+            android:textSize="19dp"
+            android:textStyle="bold"/>
     </ScrollView>
 
 
@@ -82,16 +86,16 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-
+            style="@style/ButtonGeneral"
+            android:background="@drawable/round"
             android:gravity="center"
             android:outlineProvider="background"
             android:text="PROCESS"
+            android:textColor="@android:color/black"
+
             android:textSize="15dp"
-            android:background="@drawable/round"
 
-            android:textStyle="bold"
-
-            android:textColor="#fff"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
 
