--- a/app/src/main/res/layout/activity_detail1.xml
+++ b/app/src/main/res/layout/activity_detail1.xml
@@ -7,7 +7,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".DetailActivity1">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
 
+</ScrollView>
 
     <TextView
         android:layout_marginTop="@dimen/activity_horizontal_margin"
@@ -36,7 +41,7 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
-        android:layout_height="50pt"
+        android:layout_height="40pt"
         />
     <TextView
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -51,7 +56,7 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
-        android:layout_height="50pt"
+        android:layout_height="40pt"
         />
     <TableLayout
         android:layout_width="match_parent"
@@ -90,13 +95,13 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_index"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginLeft="60dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="vertical" />
 
             <android.support.v7.widget.RecyclerView
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginLeft="57dp"
                 android:id="@+id/rv_jumlah"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
